--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -6,7 +6,7 @@
   line-height: 19px;
   select {
     cursor: pointer;
-    background-image: url('../../public/select.png');
+    background-image: url('../../../public/images/select.png');
     background-repeat: no-repeat, repeat;
     background-position: right .7em top 50%, 0 0;
     background-size: .95em auto, 100%;
