--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -1,6 +1,6 @@
-.projects {
+.users {
   margin-top: 35px;
-  .projects_list {
+  .users_list {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
