--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@import '../../styles/variables.scss';
 
 .Search {
   display: flex;
@@ -10,7 +10,7 @@
   .search_button {
     width: 74px;
     height: 68px;
-    background: url('../../public/search-icon.png') center no-repeat;
+    background: url('../../../public/images/search-icon.png') center no-repeat;
     background-color: $blue-color;
     border: 1px solid $grey-color;
   }
