add filter to search

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,30 +1,58 @@
 @import '../../styles/variables.scss';
-
 .Search {
-  display: flex;
-  padding-bottom: 47px;
-  padding-top: 32px;
-  padding-right: 39px;
-  padding-left: 25px;
-  background-color: $grey-bg-color;
-  .search_button {
-    width: 74px;
-    height: 68px;
-    background: url('../../../public/images/search-icon.png') center no-repeat;
-    background-color: $blue-color;
-    border: 1px solid $grey-color;
-  }
-  .search_input::placeholder {
-    font-size: 14px;
-    line-height: 16px;
-    color: #000;
-  }
-  .search_input {
-    font-size: 14px;
-    line-height: 16px;
-    width: 100%;
-    padding: 14px 23px;
-    border: 1px solid $grey-color;
-  }
+  .search_filed {
+    display: flex;
+    padding-bottom: 47px;
+    padding-top: 32px;
+    padding-right: 39px;
+    padding-left: 25px;
+    background-color: $grey-bg-color;
+    .search_button {
+      cursor: pointer;
+      width: 74px;
+      height: 68px;
+      background: url('../../../public/images/search-icon.png') center no-repeat;
+      background-color: $blue-color;
+      border: 1px solid $grey-color;
+    }
+    .search_input::placeholder {
+      font-size: 14px;
+      line-height: 16px;
+      color: #000;
+    }
+    .search_input {
+      font-size: 14px;
+      line-height: 16px;
+      width: 100%;
+      padding: 14px 23px;
+      border: 1px solid $grey-color;
+    }
 
+  }
+  .search_filters {
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    .filter_btn, .filter_btn_active {
+      cursor: pointer;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      transition: all .2s;
+    }
+    .filter_btn {
+      background-color: $grey-bg-color;
+    }
+    .filter_btn:hover {
+      background-color: $grey-color;
+    }
+    .filter_btn_active {
+      background-color: $grey-color;
+    }
+    .filter_btn_active:hover {
+      background-color: $grey-bg-color;
+    }
+  }
 }
